Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
             <!-- Slideshow container -->
             <div class="slideshow-container">
                 <!-- Images for slideshow -->
-                <img class="slide" src="https://scontent.fdac24-4.fna.fbcdn.net/v/t39.30808-6/404105513_731616525655572_8825424293772518780_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=o8baswVqaJQQ7kNvgEaRAu5&_nc_ht=scontent.fdac24-4.fna&oh=00_AYAFg1gEYJNP6b0TADE058bJ-F_-JIHJDaUxytqNQHnvSw&oe=666252FD" alt="Slide 1">
-                <img class="slide" src="https://scontent.fdac24-3.fna.fbcdn.net/v/t39.30808-6/400562304_818884843578774_7743641675385484340_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=c8YxhQwxtFwQ7kNvgGx-W22&_nc_ht=scontent.fdac24-3.fna&oh=00_AYDaWeA5jw_rB04g_Uu62TdHiUisWX_lZB3Nll0LN9onew&oe=66623BF2" alt="Slide 2">
+                <img class="slide" src="https://lh3.googleusercontent.com/p/AF1QipME8w7FVmKlzs5KzPsnHpQjOW7goNXlw2C29HkQ=s1360-w1360-h1020" alt="">
+                <img class="slide" src="https://lh3.googleusercontent.com/p/AF1QipM1Sj230IvIJ69WZL2p1QQC4e9WakKF-HWE2UEB=s1360-w1360-h1020" alt="">
                 <!-- Add more images as needed -->
             </div>
 
