Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <section id="testimonials" class="testimonials">
                 <h2>Testimonials</h2>
                 <div class="testimonial active">
-                    <p>"idol wave transformed our online presence. Our website traffic increased by 50% in just 3 months!"</p>
+                    <p>"idol wave transformed our online presence. Our website traffic increased by 50% in just 3 months."</p>
                     <p>- Parkin Gfic</p>
                 </div>
                 <div class="testimonial">
@@ -319,7 +319,7 @@
                     <p style="color: blue;">- Kirti Param</p>
                 </div>
                 <div class="testimonial">
-                    <p style="color: purple;">"Our website is now modern and user-friendly. We've received numerous compliments from our customers."</p>
+                    <p style="color: purple;">"Our website is now modern and user-friendly, receiving numerous compliments from our customers."</p>
                     <p style="color: purple;">- Deuk Rechard</p>
                 </div>
             </section>
