Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <p>- Parkin Gfic</p>
                 </div>
                 <div class="testimonial">
-                    <p style="color: blue;">"The team at idol wave is professional and knowledgeable. They delivered exactly what we needed."</p>
+                    <p style="color: blue;">"idol wave was professional and knowledgeable, they delivered exactly what we needed."</p>
                     <p style="color: blue;">- Kirti Param</p>
                 </div>
                 <div class="testimonial">
